add active and default current

--- a/src/ReactTab.mdx
+++ b/src/ReactTab.mdx
@@ -8,6 +8,7 @@ import { TabList, Tab } from './ReactTab.jsx'
 # ReactTab
 
 <PropsTable of={TabList} />
+<PropsTable of={Tab} />
 
 ## Basic usage
 
