--- a/src/ReactTab.mdx
+++ b/src/ReactTab.mdx
@@ -6,8 +6,10 @@ import { Playground, PropsTable } from 'docz'
 import { TabList, Tab } from './ReactTab.jsx'
 
 # ReactTab
-
+### TabList
 <PropsTable of={TabList} />
+
+### Tab
 <PropsTable of={Tab} />
 
 ## Basic usage
