添加disabled的验证

--- a/src/ReactTab.mdx
+++ b/src/ReactTab.mdx
@@ -16,9 +16,11 @@ import { TabList, Tab } from './ReactTab.jsx'
 
 
 <Playground>
-<TabList>
+<TabList current="1">
   <Tab label="tab1">tab 1 content</Tab>
-  <Tab label="tab2">tab 2 content</Tab>
+  <Tab label="tab2 默认显示">tab 2 content</Tab>
   <Tab label="tab3">tab 3 content</Tab>
+  <Tab label="tab4 disabled按钮" disabled="true">tab 4 content</Tab>
+  {false && <Tab label="tab5" disabled="true">tab 5 content</Tab>}
 </TabList>
 </Playground>
